Fixed incorrect labels and toasts preventing use of on/off buttons below, even when not visible

--- a/src/main/webui/css/custom.css
+++ b/src/main/webui/css/custom.css
@@ -260,7 +260,7 @@ input[type=number]:hover {
 }
 
 .toastContainer {
-	z-index: 2;
+	z-index: 1;
 	position: relative;
 	display: flex;
 	justify-content: center;
